COH-28769 - revert implementation to execute queries by partition instead of by member that resulted in poor query performance RQ: job.9.20231101221058.27921
[git-p4: depot-paths = "//dev/coherence-ce/release/coherence-ce-v14.1.1.0/": change = 104426]